@@ -1,3 +1,12 @@
+2013-01-16  Sergio Martin <sergio.martin@artica.es>
+
+	* util/pandora_db.pl: Added the history events to the 
+	maintenance script of database and delete the old events in
+	1000 events blocks
+
+	* util/pandora_manage.pl: Added a CLI function to 
+	create new netflow filters
+
 2013-01-16  Vanessa Gil <vanessa.gil@artica.es>
 
 	* util/pandora_revent.pl: Added 'agent_name' and
